# PharosVersionChooser

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
install/: NSIS.template.in
resources/: DesignerVersionChooser.rc  version.rc.in
src/: DesignerVersionChooser.cpp  DesignerVersionList.cpp  DesignerVersionList.h  resource.h
